fixed buy with overflowing content on mobile/tablet. can now submit form from webpage

--- a/public/scss/footer.scss
+++ b/public/scss/footer.scss
@@ -1,3 +1,5 @@
+@import "media-queries";
+
 footer {
 	position:relative;
 	background-color:hsla(270,30,10,1);
@@ -208,4 +210,40 @@ textarea:focus ~div.vertical:before, textarea:focus ~ div.vertical:after {
 .submit:hover ~ .btn-h:before, .submit:hover ~ .btn-h:after {
 	width:100%;
 	transition:all 0.3s ease 0s;
+}
+
+#form-mask {
+	position:absolute;
+	top:0;
+	left:0;
+	bottom:0;
+	right:0;
+
+	width:100%;
+	height:100%;
+	display:block;
+	z-index:12;
+
+	opacity:0;
+	pointer-events:none;
+	background-color:hsla(270,30,8,0.95);
+	transition:opacity 0.8s ease 0s;
+}
+
+.form-mask-content {
+	width:100%;
+	height:100%;
+	display:block;
+	position:relative;
+	padding:0px 30px;
+}
+
+.form-mask-content h3 {
+	color:#ccc;
+	@media #{$mobile} {
+		position:absolute;
+		bottom:0;
+		width:100%;
+		text-align:center;
+	}
 }
